--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=EmployeeDepartmentAPI
+spring.datasource.url=jdbc:postgresql://localhost:5434/employees
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+
+spring.jackson.mapper.default-view-inclusion=true
+
+logging.level.org.hibernate.SQL=DEBUG
