add spring security with JWT token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.jackson.mapper.default-view-inclusion=true
 
 logging.level.org.hibernate.SQL=DEBUG
+
+my_encrypt_key=5E4Z7HS8h483X+WzdVkbkogPcrh2DIR0KXNiB5+JLtE=
