add https support, IP blocking, user login and changing roles logging, rewrote tests with jwt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,13 @@ spring.liquibase.change-log=classpath:db/changelog/master.xml
 spring.jackson.mapper.default-view-inclusion=true
 
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 my_encrypt_key=5E4Z7HS8h483X+WzdVkbkogPcrh2DIR0KXNiB5+JLtE=
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:cert.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=mycert
+
+loginAttempt.max = 5
