--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,11 @@ services:
     ports:
       - "5434:5432"
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
   app:
     build:
       context: .
