--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,27 @@ logging.level.org.springframework.security=DEBUG
 
 my_encrypt_key=5E4Z7HS8h483X+WzdVkbkogPcrh2DIR0KXNiB5+JLtE=
 
+loginAttempt.max = 5
+
+spring.security.oauth2.client.registration.yandex.client-id=a3f78331f35549be9bba42960b0c73c9
+spring.security.oauth2.client.registration.yandex.client-secret=134a0d561c944397bf153c3ebba9ef41
+spring.security.oauth2.client.registration.yandex.redirect-uri=https://localhost:8080/login/oauth2/code/yandex
+spring.security.oauth2.client.registration.yandex.authorization-grant-type=authorization_code
+
+spring.security.oauth2.client.provider.yandex.authorization-uri=https://oauth.yandex.ru/authorize
+spring.security.oauth2.client.provider.yandex.token-uri=https://oauth.yandex.ru/token
+spring.security.oauth2.client.provider.yandex.user-info-uri=https://login.yandex.ru/info
+spring.security.oauth2.client.provider.yandex.user-name-attribute=login
+
+spring.security.oauth2.client.registration.github.client-id=Ov23liMCegRVrxqV9JfO
+spring.security.oauth2.client.registration.github.client-secret=5cf94ded1f97940aa27f9501bd060f45bc4460fa
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.github.redirect-uri=https://localhost:8080/login/oauth2/code/github
+
+
+server.port=8080
+server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:cert.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=mycert
-
-loginAttempt.max = 5
